examples/ShouldFail/TypeErrors/PrintFirstArg.java
class PrintArgs {
  public static void main (String[] argv) {
    System.out.println (argv[0]);
  }
}
